--- a/src/Maths/Silk.NET.Maths/Scalar.As.tt
+++ b/src/Maths/Silk.NET.Maths/Scalar.As.tt
@@ -93,7 +93,50 @@ namespace Silk.NET.Maths
         /// <returns>The converted value</returns>
         [MethodImpl(MaxOpt)]
         public static TTo As<TFrom, TTo>(TFrom val) where TFrom : notnull where TTo : notnull
-        {   
+        {
+            // On CoreCLR, we should use the 2nd (faster) path which is exactly the same logic but rejigged a bit as to
+            // not hit RyuJIT's inlining restrictions. On Mono, this code actually causes invalid assembly to be
+            // produced so we have preserved the old (theoretically slower, but we think that Mono is able to
+            // specialize it correctly anyway unlike RyuJIT) 1st path.
+#ifdef ANDROID || IOS
+            return FromHalfToHalf(val);
+            
+<# for (var i = 0; i < len; i++) { #>
+<# for (var j = 0; j < len; j++) {  
+#>
+
+            [MethodImpl(MaxOpt)]
+            static TTo From<#= typesFullNames[i] #>To<#= typesFullNames[j] #>(TFrom val)
+            {
+                if (typeof(TFrom) == typeof(<#= types[i] #>) && typeof(TTo) == typeof(<#= types[j] #>))
+                {
+<# 
+var intermediateType = "";
+if (intermediateCasts.TryGetValue($"{types[i]}_{types[j]}", out var res))
+    intermediateType = $" ({res})";
+
+#>
+<# if (types[i] == "Complex") { #>
+                    return (TTo) (object) (<#= types[j] #>)<#= intermediateType #> ((<#= types[i] #>) (object) val).Real;
+<# } else { #>
+                    return (TTo) (object) (<#= types[j] #>)<#= intermediateType #> (<#= types[i] #>) (object) val;
+<# } #>
+                }
+                
+<# 
+            var jNext = (j + 1) % len;
+            var iNext = i + (jNext == 0 ? 1 : 0);
+            if (iNext == len) {
+            #>
+                ThrowUnsupportedType();
+                return default!;
+<# } else { #>
+                return From<#= typesFullNames[iNext] #>To<#= typesFullNames[jNext] #>(val);
+<# } #>
+            }    
+<# } #>
+<# } #>
+#else
 <# for (var i = 0; i < len; i++) { #>
             if (typeof(TFrom) == typeof(<#= types[i] #>))
             {
@@ -128,6 +171,7 @@ if (intermediateCasts.TryGetValue($"{types[i]}_{types[j]}", out var res))
 <# } #>
             ThrowUnsupportedType();
             return default!;
+#endif
         }
     }
 }
