Add a comments section to the website

--- a/website/index.cshtml
+++ b/website/index.cshtml
@@ -35,7 +35,13 @@
         "_comment5": "Theme-global: footer configuration.",
         "theme.silk.footer.copyright": ".NET Foundation and Contributors",
         "theme.silk.footer.copyright.url": "https://dotnetfoundation.org",
-        "theme.silk.footer.note": "Khronos®, Vulkan® are registered trademarks, and OpenXR™ is a trademark of The Khronos Group Inc. and is registered as a trademark in China, the European Union, Japan and the United Kingdom. OpenCL™, OpenGL®, and the OpenGL ES™ logos are registered trademarks or trademarks used under license by Khronos. Microsoft® and DirectX® are registered trademarks of Microsoft Corporation, used solely for identification. All other product names, trademarks, and/or company names are also used solely for identification and belong to their respective owners. Use of external images, trademarks, and/or resources are not endorsements, and no information in or regarding any of these external resources has been endorsed or approved by Silk.NET or the .NET Foundation."
+        "theme.silk.footer.note": "Khronos®, Vulkan® are registered trademarks, and OpenXR™ is a trademark of The Khronos Group Inc. and is registered as a trademark in China, the European Union, Japan and the United Kingdom. OpenCL™, OpenGL®, and the OpenGL ES™ logos are registered trademarks or trademarks used under license by Khronos. Microsoft® and DirectX® are registered trademarks of Microsoft Corporation, used solely for identification. All other product names, trademarks, and/or company names are also used solely for identification and belong to their respective owners. Use of external images, trademarks, and/or resources are not endorsements, and no information in or regarding any of these external resources has been endorsed or approved by Silk.NET or the .NET Foundation.",
+
+        "_comment6": "Theme-global: Comments section!",
+        "theme.silk.giscus.repo": "dotnet/Silk.NET",
+        "theme.silk.giscus.repo.id": "MDEwOlJlcG9zaXRvcnkxOTEyMzIyNDA=",
+        "theme.silk.giscus.category": "Webpage Comments",
+        "theme.silk.giscus.category.id": "DIC_kwDOC2X48M4CT__i"
     }
   }
 } 
