--- a/website/_theme/src/24-actualcontent.cshtml
+++ b/website/_theme/src/24-actualcontent.cshtml
@@ -24,6 +24,15 @@
 
 @((IHtmlContent) ViewData["body"])
 
+@if ((tocModel?.Root.Metadata?.ContainsKey("theme.silk.giscus.repo") ?? false) &&
+     (tocModel?.Root.Metadata?.ContainsKey("theme.silk.giscus.repo.id") ?? false) &&
+     (tocModel?.Root.Metadata?.ContainsKey("theme.silk.giscus.category") ?? false) &&
+     (tocModel?.Root.Metadata?.ContainsKey("theme.silk.giscus.category.id") ?? false))
+{
+    <hr class="silk-last-hr" />
+    <div class="giscus" />
+}
+
 @if (tocModel?.Root.Metadata?.TryGetValue("theme.silk.footer.copyright", out copyrightHolder) ?? false)
 {
     <hr class="silk-last-hr">
