--- a/website/blog/index.cshtml
+++ b/website/blog/index.cshtml
@@ -5,6 +5,7 @@
         "Url": "index.html",
         "_comment": "Order the children newest (at the top) to oldest!",
         "Children": [
+            { "Url": "::mar-2023/jackcs.md" },
             { "Url": "::jan-2022/silkcommunity.md" },
             { "Url": "::dec-2021/structure-chaining.md" },
             { "Url": "::nov-2021/xamarin-deprecation.md" },
