--- a/src/Vulkan/Silk.NET.Vulkan/Chain.g.tt
+++ b/src/Vulkan/Silk.NET.Vulkan/Chain.g.tt
@@ -358,6 +358,8 @@ public interface IChain<<#= tList #>> : <#= iBaseList #>
     /// The first structure in the structure chain.
     /// </summary>
     TChain Head { get; }
+
+    ref TChain HeadRef { get; }
 <#
     }
     else
@@ -367,6 +369,8 @@ public interface IChain<<#= tList #>> : <#= iBaseList #>
     /// Structure no. <#= i #> in the structure chain.
     /// </summary>
     T<#= iM1 #> Item<#= iM1 #> { get; }
+
+    ref T<#= iM1 #> Item<#= iM1 #>Ref { get; }
 <#
     }
 #>
@@ -434,6 +438,8 @@ public unsafe sealed class Chain<<#= tList #>> : Chain, IEquatable<Chain<<#= tLi
             ptr->PNext = nextPtr;
         }
     }
+
+    public ref TChain HeadRef => ref Unsafe.AsRef<TChain>((BaseInStructure*) _headPtr);
 <#
         for (var j = 1; j < i; j++)
         {
@@ -459,6 +465,8 @@ public unsafe sealed class Chain<<#= tList #>> : Chain, IEquatable<Chain<<#= tLi
             ptr->PNext = nextPtr;
         }
     }
+
+    public ref T<#= j #> Item<#= j #>Ref => ref Unsafe.AsRef<T<#= j #>>(Item<#= j #>Ptr);
 <#
         } // for (int j = 1; j < i; j++) {
 #>
