--- a/src/Vulkan/Silk.NET.Vulkan/Chain.g.tt
+++ b/src/Vulkan/Silk.NET.Vulkan/Chain.g.tt
@@ -359,6 +359,9 @@ public interface IChain<<#= tList #>> : <#= iBaseList #>
     /// </summary>
     TChain Head { get; set; }
 
+    /// <summary>
+    /// A reference to the first structure in the chain.
+    /// </summary>
     ref TChain HeadRef { get; }
 <#
     }
@@ -370,6 +373,9 @@ public interface IChain<<#= tList #>> : <#= iBaseList #>
     /// </summary>
     T<#= iM1 #> Item<#= iM1 #> { get; set; }
 
+    /// <summary>
+    /// A reference to structure no. <#= i #> in the structure chain.
+    /// </summary>
     ref T<#= iM1 #> Item<#= iM1 #>Ref { get; }
 <#
     }
@@ -439,6 +445,9 @@ public unsafe sealed class Chain<<#= tList #>> : Chain, IEquatable<Chain<<#= tLi
         }
     }
 
+    /// <summary>
+    /// Gets a reference to the head of the chain.
+    /// </summary>
     public ref TChain HeadRef => ref Unsafe.AsRef<TChain>((BaseInStructure*) _headPtr);
 <#
         for (var j = 1; j < i; j++)
@@ -465,7 +474,9 @@ public unsafe sealed class Chain<<#= tList #>> : Chain, IEquatable<Chain<<#= tLi
             ptr->PNext = nextPtr;
         }
     }
-
+    /// <summary>
+    /// Gets a reference to the second item in the chain.
+    /// </summary>
     public ref T<#= j #> Item<#= j #>Ref => ref Unsafe.AsRef<T<#= j #>>(Item<#= j #>Ptr);
 <#
         } // for (int j = 1; j < i; j++) {
