mistakes were made in ref readonly semantics

--- a/src/Vulkan/Silk.NET.Vulkan/Chain.g.tt
+++ b/src/Vulkan/Silk.NET.Vulkan/Chain.g.tt
@@ -362,7 +362,7 @@ public interface IChain<<#= tList #>> : <#= iBaseList #>
     /// <summary>
     /// A reference to the first structure in the chain.
     /// </summary>
-    ref readonly TChain HeadRef { get; }
+    ref TChain HeadRef { get; }
 <#
     }
     else
@@ -376,7 +376,7 @@ public interface IChain<<#= tList #>> : <#= iBaseList #>
     /// <summary>
     /// A reference to structure no. <#= i #> in the structure chain.
     /// </summary>
-    ref readonly T<#= iM1 #> Item<#= iM1 #>Ref { get; }
+    ref T<#= iM1 #> Item<#= iM1 #>Ref { get; }
 <#
     }
 #>
@@ -448,7 +448,7 @@ public unsafe sealed class Chain<<#= tList #>> : Chain, IEquatable<Chain<<#= tLi
     /// <summary>
     /// Gets a reference to the head of the chain.
     /// </summary>
-    public ref readonly TChain HeadRef => ref Unsafe.AsRef<TChain>((BaseInStructure*) _headPtr);
+    public ref TChain HeadRef => ref Unsafe.AsRef<TChain>((BaseInStructure*) _headPtr);
 <#
         for (var j = 1; j < i; j++)
         {
@@ -477,7 +477,7 @@ public unsafe sealed class Chain<<#= tList #>> : Chain, IEquatable<Chain<<#= tLi
     /// <summary>
     /// Gets a reference to the second item in the chain.
     /// </summary>
-    public ref readonly T<#= j #> Item<#= j #>Ref => ref Unsafe.AsRef<T<#= j #>>(Item<#= j #>Ptr);
+    public ref T<#= j #> Item<#= j #>Ref => ref Unsafe.AsRef<T<#= j #>>(Item<#= j #>Ptr);
 <#
         } // for (int j = 1; j < i; j++) {
 #>
