--- a/website/index.cshtml
+++ b/website/index.cshtml
@@ -41,7 +41,10 @@
         "theme.silk.giscus.repo": "dotnet/Silk.NET",
         "theme.silk.giscus.repo.id": "MDEwOlJlcG9zaXRvcnkxOTEyMzIyNDA=",
         "theme.silk.giscus.category": "Webpage Comments",
-        "theme.silk.giscus.category.id": "DIC_kwDOC2X48M4CT__i"
+        "theme.silk.giscus.category.id": "DIC_kwDOC2X48M4CT__i",
+
+        "_comment7": "This page is exempt from having a comments page.",
+        "theme.silk.giscus.exempt": "true"
     }
   }
 } 
