--- a/website/src/components/HomepageFeatures/styles.module.css
+++ b/website/src/components/HomepageFeatures/styles.module.css
@@ -1,11 +1,11 @@
-.features {
+.corerow {
   display: flex;
   align-items: center;
   padding: 2rem 0;
   width: 100%;
 }
 
-.featureSvg {
+.featureimg {
   height: 200px;
   width: 200px;
 }
