Fix reamin typo

--- a/website/index.cshtml
+++ b/website/index.cshtml
@@ -240,7 +240,7 @@
           <br />
           <br />
           
-          This means you can count on us not disappearing tomorrow, and continuing to reamin under steady development; a guarantee that similar libraries just can't provide.</p>
+          This means you can count on us not disappearing tomorrow, and continuing to remain under steady development; a guarantee that similar libraries just can't provide.</p>
       </div>
       <div class="col-lg-4">
         <div class="icon icon-lg icon-shape bg-gradient-white shadow rounded-circle text-primary">
